aligned sort buttons, fixed scss syntax

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,6 +9,10 @@
   margin-right: 10px;
   color: blue; }
 
+#sortButtons {
+  display: flex;
+  flex-direction: row; }
+
 #productList {
   color: blue; }
 
