--- a/scss/partials/_index.scss
+++ b/scss/partials/_index.scss
@@ -10,3 +10,8 @@
   margin-right: 10px;
   color: blue;
 }
+
+#sortButtons{
+  display: flex;
+  flex-direction: row;
+}
